Binder.bindInstanceFields(Object) method implementation (#47).
Binds class instance fields using reflection using Binder.forField()

Change-Id: I597f3832d112cfa69c73fb185f1564c482e4eb15

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -80,6 +80,13 @@
             <artifactId>jsoup</artifactId>
         </dependency>
 
+        <!-- Small reflection library -->
+        <dependency>
+            <groupId>com.googlecode.gentyref</groupId>
+            <artifactId>gentyref</artifactId>
+            <version>1.2.0</version>
+        </dependency>
+
         <!-- TESTING DEPENDENCIES -->
 
         <!-- Test dependencies -->
