--- a/compatibility-server/pom.xml
+++ b/compatibility-server/pom.xml
@@ -80,7 +80,7 @@
                     <instructions>
                         <Bundle-RequiredExecutionEnvironment>${osgi.execution.environment}</Bundle-RequiredExecutionEnvironment>
                         <Bundle-Version>${osgi.bundle.version}</Bundle-Version>
-                        <Export-Package>com.vaadin.v7.*;version="${osgi.bundle.version}"</Export-Package>
+                        <Export-Package>VAADIN;version="${osgi.bundle.version}",com.vaadin.v7.*;version="${osgi.bundle.version}"</Export-Package>
 
                         <Require-Bundle>
                             com.vaadin.server;bundle-version="${osgi.bundle.version}",
