--- a/server/pom.xml
+++ b/server/pom.xml
@@ -189,7 +189,7 @@
                     <instructions>
                         <Bundle-RequiredExecutionEnvironment>${osgi.execution.environment}</Bundle-RequiredExecutionEnvironment>
                         <Bundle-Version>${osgi.bundle.version}</Bundle-Version>
-                        <Export-Package>com.vaadin.*;version="${osgi.bundle.version}"</Export-Package>
+                        <Export-Package>VAADIN;version="${osgi.bundle.version}",com.vaadin.*;version="${osgi.bundle.version}"</Export-Package>
                         <Import-Package>javax.servlet;version="${osgi.javax.servlet.version}",
                             javax.servlet.http;version="${osgi.javax.servlet.version}",
                             javax.validation;version="${javax.validation.version}";resolution:=optional,
