Add missing groupId to bom/pom.xml
Maven versions plugin will fail (NPE) otherwise.

Change-Id: I8e3f53c5f2cb79c23b41fc35116a6cf03f23f232

--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>vaadin-parent</artifactId>
         <version>1.0.0</version>
     </parent>
+    <groupId>com.vaadin</groupId>
     <artifactId>vaadin-bom</artifactId>
     <packaging>pom</packaging>
     <version>8.0-SNAPSHOT</version>
