--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -82,4 +82,20 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+    <profile>
+        <id>release</id>
+        <activation>
+            <activeByDefault>false</activeByDefault>
+        </activation>
+        <build>
+            <plugins>
+                <plugin>
+                    <groupId>org.sonatype.plugins</groupId>
+                    <artifactId>nexus-staging-maven-plugin</artifactId>
+                    <version>1.6.7</version>
+                    <extensions>true</extensions>
+                </plugin>
+            </plugins>
+        </build>
+    </profile>
 </project>
