--- a/pom.xml
+++ b/pom.xml
@@ -227,7 +227,7 @@
             <dependency>
                 <groupId>com.vaadin</groupId>
                 <artifactId>vaadin-testbench</artifactId>
-                <version>4.1.0</version>
+                <version>5.0.0.alpha1</version>
             </dependency>
             <dependency>
                 <groupId>org.eclipse.jetty</groupId>
