--- a/uitest/ivy.xml
+++ b/uitest/ivy.xml
@@ -108,7 +108,7 @@
             <exclude org="org.eclipse.jetty.orbit"></exclude>
         </dependency>
 
-        <dependency org="junit" name="junit" rev="4.11"
+        <dependency org="junit" name="junit" rev="4.12"
             conf="build -> default" />
         <dependency org="org.hamcrest" name="hamcrest-all"
             rev="1.3" conf="build->default" />
@@ -122,7 +122,7 @@
         <dependency org="org.hsqldb" name="hsqldb" rev="2.2.6"
             conf="build -> default" />
         <dependency org="com.vaadin" name="vaadin-testbench"
-            rev="4.1.0" conf="build-provided -> default" />
+            rev="5.0.0.alpha1" conf="build-provided -> default" />
         <!-- This should be removed once tests have been updated to use lang3 -->
         <dependency org="commons-lang" name="commons-lang"
             rev="2.6" conf="build -> default" />
