Support for disabling ComboBox items

--- a/uitest/src/main/webapp/WEB-INF/web.xml
+++ b/uitest/src/main/webapp/WEB-INF/web.xml
@@ -158,6 +158,16 @@
         <async-supported>true</async-supported>
     </servlet>
 
+    <servlet>
+        <servlet-name>ComboBoxTest</servlet-name>
+        <servlet-class>com.vaadin.server.VaadinServlet</servlet-class>
+        <init-param>
+            <param-name>UI</param-name>
+            <param-value>com.vaadin.tests.components.combobox.ComboBoxDisabledOptions</param-value>
+        </init-param>
+        <async-supported>true</async-supported>
+    </servlet>
+
     <servlet-mapping>
         <servlet-name>Embed App 1</servlet-name>
         <url-pattern>/embed1/*</url-pattern>
@@ -214,6 +224,11 @@
     <servlet-mapping>
         <servlet-name>RPCLogger</servlet-name>
         <url-pattern>/rpclogger/*</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>ComboBoxTest</servlet-name>
+        <url-pattern>/combobox/*</url-pattern>
     </servlet-mapping>
 
     <servlet-mapping>
