--- a/test/pom.xml
+++ b/test/pom.xml
@@ -9,9 +9,11 @@
     </parent>
     <artifactId>vaadin-test</artifactId>
     <name>vaadin-test</name>
-    <packaging>pom</packaging>
-    <properties>
+    
+    <packaging>pom</packaging><properties>
         <failOnMissingWebXml>false</failOnMissingWebXml>
+        <vaadin.testbench.version>5.0.0.alpha1</vaadin.testbench.version>
+        <skip.jetty.plugin>false</skip.jetty.plugin>
     </properties>
 
     <repositories>
@@ -21,6 +23,18 @@
         </repository>
     </repositories>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.vaadin</groupId>
+                <artifactId>vaadin-bom</artifactId>
+                <version>${project.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
 
         <!-- API DEPENDENCIES -->
@@ -28,12 +42,10 @@
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-server</artifactId>
-            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-themes</artifactId>
-            <version>${project.version}</version>
         </dependency>
 
         <!-- Servlet 3.0 API -->
@@ -71,6 +83,7 @@
         <module>addon-using-init-param-widget-set</module>
         <module>space in directory</module>
         <module>vaadinservletconfiguration-widget-set</module>
+        <module>spring-boot-test</module>
     </modules>
 
     <build>
@@ -105,21 +118,6 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>com.github.klieber</groupId>
-                <artifactId>phantomjs-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>install</goal>
-                        </goals>
-                        <configuration>
-                            <version>${phantomjs.version}</version>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
             </plugin>
             <plugin>
@@ -137,6 +135,20 @@
                         <phantomjs.binary.path>${phantomjs.binary}</phantomjs.binary.path>
                     </systemPropertyVariables>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.github.klieber</groupId>
+                <artifactId>phantomjs-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>install</goal>
+                        </goals>
+                        <configuration>
+                            <version>${phantomjs.version}</version>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
