Update liferay dependency to 6.2.5
Official Liferay support for FW 8 is 6.2.

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>com.liferay.portal</groupId>
             <artifactId>portal-service</artifactId>
-            <version>${liferay.portal.version}</version>
+            <version>${liferay.portal-service.version}</version>
             <scope>provided</scope>
         </dependency>
 
