--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <!-- Used version numbers for dependencies -->
-        <liferay.portal.version>6.0.2</liferay.portal.version>
+        <liferay.portal-service.version>6.2.5</liferay.portal-service.version>
         <jetty.version>9.3.9.v20160517</jetty.version>
 
         <vaadin.gwt.version>2.8.0</vaadin.gwt.version>
