--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -13,7 +13,7 @@
     <name>Vaadin Framework (Bill of Materials)</name>
     <description>Vaadin Framework (Bill of Materials)</description>
     <url>http://vaadin.com</url>
-    
+
     <properties>
         <vaadin.spring.version>2.0-SNAPSHOT</vaadin.spring.version>
     </properties>
@@ -102,10 +102,14 @@
             </dependency>
             <dependency>
                 <groupId>com.vaadin</groupId>
+                <artifactId>vaadin-spring-boot</artifactId>
+                <version>${vaadin.spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.vaadin</groupId>
                 <artifactId>vaadin-spring</artifactId>
                 <version>${vaadin.spring.version}</version>
             </dependency>
-            
 
         </dependencies>
     </dependencyManagement>
