--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -5,6 +5,7 @@
         <groupId>com.vaadin</groupId>
         <artifactId>vaadin-parent</artifactId>
         <version>1.0.0</version>
+	<relativePath />
     </parent>
     <groupId>com.vaadin</groupId>
     <artifactId>vaadin-bom</artifactId>
