Add Vaadin Spring dependency version to BOM (#112)
* Add Vaadin Spring dependency version to BOM

This patch adds a smoke test that check that a basic
Vaadin UI loads and communication works.

* Remove Maven wrapper from Spring Boot test

* Remove .gitignore, add missing newlines

* Minor fixes to pom.xml files

* Separate vaadin-test from vaadin-root

* Fix whitespace

--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -5,6 +5,7 @@
         <groupId>com.vaadin</groupId>
         <artifactId>vaadin-parent</artifactId>
         <version>1.0.0</version>
+        <relativePath />
     </parent>
     <groupId>com.vaadin</groupId>
     <artifactId>vaadin-bom</artifactId>
@@ -13,6 +14,18 @@
     <name>Vaadin Framework (Bill of Materials)</name>
     <description>Vaadin Framework (Bill of Materials)</description>
     <url>http://vaadin.com</url>
+
+    <properties>
+        <vaadin.spring.version>2.0-SNAPSHOT</vaadin.spring.version>
+    </properties>
+
+    <repositories>
+        <repository>
+            <id>vaadin-snapshots</id>
+            <url>http://oss.sonatype.org/content/repositories/vaadin-snapshots</url>
+        </repository>
+    </repositories>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -75,6 +88,25 @@
                 <artifactId>vaadin-compatibility-client-compiled</artifactId>
                 <version>${project.version}</version>
             </dependency>
+
+            <!-- AddOn Dependencies -->
+
+            <dependency>
+                <groupId>com.vaadin</groupId>
+                <artifactId>vaadin-spring-boot-starter</artifactId>
+                <version>${vaadin.spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.vaadin</groupId>
+                <artifactId>vaadin-spring-boot</artifactId>
+                <version>${vaadin.spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.vaadin</groupId>
+                <artifactId>vaadin-spring</artifactId>
+                <version>${vaadin.spring.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
     <profiles>
