--- a/uitest-common/pom.xml
+++ b/uitest-common/pom.xml
@@ -49,7 +49,8 @@
         </dependency>
         <dependency>
             <groupId>com.vaadin</groupId>
-            <artifactId>vaadin-testbench</artifactId>
+            <artifactId>vaadin-testbench-api</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
