--- a/uitest/ivy.xml
+++ b/uitest/ivy.xml
@@ -121,8 +121,8 @@
         <!-- Mainly for SQLContainer tests -->
         <dependency org="org.hsqldb" name="hsqldb" rev="2.2.6"
             conf="build -> default" />
-        <dependency org="com.vaadin" name="vaadin-testbench"
-            rev="5.0.0.alpha2" conf="build-provided -> default" />
+        <dependency org="com.vaadin" name="vaadin-testbench-api"
+            rev="${vaadin.version}" conf="build-provided -> default" />
         <!-- This should be removed once tests have been updated to use lang3 -->
         <dependency org="commons-lang" name="commons-lang"
             rev="2.6" conf="build -> default" />
