Include Framework Element API for TestBench in the project
This makes it possible to use the latest Element classes in the
framework tests and to simplify the build process.

The license for the included element classes are changed to Apache2

--- a/test/pom.xml
+++ b/test/pom.xml
@@ -64,7 +64,7 @@
         </dependency>
         <dependency>
             <groupId>com.vaadin</groupId>
-            <artifactId>vaadin-testbench</artifactId>
+            <artifactId>vaadin-testbench-api</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
