--- a/test/pom.xml
+++ b/test/pom.xml
@@ -15,7 +15,6 @@
         <phantomjs.version>2.1.1</phantomjs.version>
         <vaadin.version>8.0-SNAPSHOT</vaadin.version>
         <failOnMissingWebXml>false</failOnMissingWebXml>
-        <vaadin.testbench.version>5.0.0.alpha1</vaadin.testbench.version>
     </properties>
 
     <repositories>
@@ -40,6 +39,12 @@
     <dependencies>
 
         <!-- API DEPENDENCIES -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+        
         <!-- Project modules -->
         <dependency>
             <groupId>com.vaadin</groupId>
@@ -60,7 +65,6 @@
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-testbench</artifactId>
-            <version>${vaadin.testbench.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -75,6 +79,7 @@
         <module>space in directory</module>
         <module>vaadinservletconfiguration-widget-set</module>
         <module>spring-boot</module>
+        <module>cdi</module>
     </modules>
 
     <build>
