--- a/compatibility-server/pom.xml
+++ b/compatibility-server/pom.xml
@@ -55,6 +55,13 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
+
+        <!-- Google App Engine -->
+        <dependency>
+            <groupId>com.google.appengine</groupId>
+            <artifactId>appengine-api-1.0-sdk</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
