--- a/test/addon-using-no-defined-widget-set/pom.xml
+++ b/test/addon-using-no-defined-widget-set/pom.xml
@@ -18,15 +18,8 @@
         </dependency>
         <dependency>
             <groupId>com.vaadin</groupId>
-            <artifactId>vaadin-test-widget-set-testutil</artifactId>
-            <version>${project.version}</version>
-            <type>test-jar</type>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.vaadin.addon</groupId>
             <artifactId>vaadin-context-menu</artifactId>
-            <version>0.7.4</version>
+            <version>${contextmenu.version}</version>
         </dependency>
 
     </dependencies>
@@ -36,6 +29,7 @@
             <plugin>
                 <groupId>com.vaadin</groupId>
                 <artifactId>vaadin-maven-plugin</artifactId>
+                <version>${vaadin.plugin.version}</version>
                 <executions>
                     <execution>
                         <goals>
@@ -45,6 +39,12 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-install-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
             </plugin>
         </plugins>
     </build>
