--- a/test/spring-boot/pom.xml
+++ b/test/spring-boot/pom.xml
@@ -76,6 +76,12 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <artifactId>maven-install-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
