Fix vaadin-test project structure and dependencies

--- a/test/pom.xml
+++ b/test/pom.xml
@@ -36,6 +36,11 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>com.vaadin</groupId>
+                <artifactId>vaadin-test-widget-set-testutil</artifactId>
+                <version>${project.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -123,6 +128,9 @@
                 <plugin>
                     <artifactId>maven-install-plugin</artifactId>
                     <version>2.5.1</version>
+                    <configuration>
+                        <skip>true</skip>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
