--- a/test/addon-using-own-widget-set/pom.xml
+++ b/test/addon-using-own-widget-set/pom.xml
@@ -14,12 +14,11 @@
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-test-widget-set-testutil</artifactId>
-            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-context-menu</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>${contextmenu.version}</version>
         </dependency>
 
     </dependencies>
@@ -39,12 +38,6 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <artifactId>maven-install-plugin</artifactId>
-                <configuration>
-                    <skip>true</skip>
-                </configuration>
             </plugin>
         </plugins>
     </build>
