Replace FontAwesome with Vaadin Icons
Fixes #7979

--- a/themes/pom.xml
+++ b/themes/pom.xml
@@ -14,6 +14,10 @@
     <url>https://vaadin.com/</url>
     <description>Vaadin themes</description>
 
+    <properties>
+        <vaadin.icons.version>2.0.0</vaadin.icons.version>
+    </properties>
+
     <dependencies>
         <!-- Maven plugin scans for vaadin-server... -->
         <dependency>
@@ -36,6 +40,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.vaadin</groupId>
+            <artifactId>vaadin-icons</artifactId>
+            <version>${vaadin.icons.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.carrotsearch</groupId>
             <artifactId>smartsprites</artifactId>
             <scope>provided</scope>
@@ -48,8 +58,39 @@
         </dependency>
     </dependencies>
 
+    <repositories>
+        <!-- Used for vaadin icons -->
+        <repository>
+            <id>vaadin-addons</id>
+            <url>https://maven.vaadin.com/vaadin-addons</url>
+        </repository>
+    </repositories>
+
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <id>copy-font-icons</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>unpack-dependencies</goal>
+                        </goals>
+                        <!-- Unpack Vaadin Icons font files and .scss to this project -->
+                        <configuration>
+                            <includeGroupIds>com.vaadin</includeGroupIds>
+                            <includeArtifactIds>vaadin-icons</includeArtifactIds>
+                            <excludeTransitive>true</excludeTransitive>
+                            <includes>VAADIN\/addons\/vaadin-icons\/**</includes>
+                            <overWrite>true</overWrite>
+                            <outputDirectory>${project.basedir}/src/main/themes/</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
                 <executions>
