--- a/test/servlet-containers/generic/ivy.xml
+++ b/test/servlet-containers/generic/ivy.xml
@@ -68,6 +68,10 @@
             <exclude org="javax.servlet"></exclude>
             <exclude type="pom" />
         </dependency>
+        <dependency org="com.vaadin" name="vaadin-icons" rev="2.0.0"
+            conf="build->default">
+            <exclude type="pom" />
+        </dependency>
 
         <!-- For compiling TestingWidgetSet -->
         <dependency org="com.vaadin" name="vaadin-client-compiler"
