--- a/compatibility-shared/pom.xml
+++ b/compatibility-shared/pom.xml
@@ -14,6 +14,11 @@
     <url>https://vaadin.com/</url>
     <description>Vaadin 7 compatibility package for Vaadin 8</description>
 
+    <properties>
+        <!-- These files are directly from Vaadin 7 -->
+        <sonar.skip>true</sonar.skip>
+    </properties>
+
     <dependencies>
         <!-- Project modules -->
         <dependency>
