Fix vaadin-test and all its submodules (#8076)
This patch applies following fixes:
* ContextMenu with correct version for Vaadin 8
* Correctly skip install plugin for test submodules
* Make widgetset-test-util a test depdendency, don't use test-jar
* Fix vaadin-test project structure and dependencies
* Clean up testutil pom
* Add README.md

--- a/test/own-widget-set/pom.xml
+++ b/test/own-widget-set/pom.xml
@@ -14,14 +14,6 @@
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-test-widget-set-testutil</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.vaadin</groupId>
-            <artifactId>vaadin-test-widget-set-testutil</artifactId>
-            <version>${project.version}</version>
-            <type>test-jar</type>
-            <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
@@ -29,6 +21,7 @@
             <plugin>
                 <groupId>com.vaadin</groupId>
                 <artifactId>vaadin-maven-plugin</artifactId>
+                <version>${vaadin.plugin.version}</version>
                 <executions>
                     <execution>
                         <goals>
