--- a/compatibility-server/pom.xml
+++ b/compatibility-server/pom.xml
@@ -92,7 +92,11 @@
                         <Bundle-RequiredExecutionEnvironment>${osgi.execution.environment}</Bundle-RequiredExecutionEnvironment>
                         <Bundle-Version>${osgi.bundle.version}</Bundle-Version>
                         <Export-Package>VAADIN;version="${osgi.bundle.version}",com.vaadin.v7.*;version="${osgi.bundle.version}"</Export-Package>
-
+                        <Import-Package>!com.google.appengine.api.datastore,
+                            !com.google.appengine.api.memcache,
+                            !com.google.apphosting.api,
+                            *
+                        </Import-Package>
                         <Require-Bundle>
                             com.vaadin.server;bundle-version="${osgi.bundle.version}",
                             com.vaadin.shared;bundle-version="${osgi.bundle.version}"
