JspIntegrationTest as a separate module Part of vaadin/framework8-issues#539

--- a/test/pom.xml
+++ b/test/pom.xml
@@ -89,6 +89,7 @@
         <module>vaadinservletconfiguration-widget-set</module>
         <module>spring-boot</module>
         <module>cdi</module>
+        <module>servlet-containers/jsp-integration</module>
     </modules>
 
     <build>
