--- a/test/pom.xml
+++ b/test/pom.xml
@@ -99,6 +99,8 @@
         <module>vaadinservletconfiguration-widget-set</module>
         <module>spring-boot</module>
         <module>cdi</module>
+        <module>bean-api-validation</module>
+        <module>bean-impl-validation</module>
     </modules>
 
     <build>
