Integration tests moved out from uitest

--- a/test/pom.xml
+++ b/test/pom.xml
@@ -98,6 +98,7 @@
         <module>space in directory</module>
         <module>vaadinservletconfiguration-widget-set</module>
         <module>spring-boot</module>
+        <module>servlet-containers/generic</module>
         <module>cdi</module>
     </modules>
 
